# pokemon_agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_LANGGRAPH.md  claude_client.py  claude_debugger.py  debug_tool_interactive.ipynb  debug_tools.ipynb  gemini_client.py  langgraph_emulator_adapter.py  langgraph_knowledge_base.py  langgraph_main.py  langgraph_pokemon_agent.py  langgraph_tools_adapter.py  llm_client_base.py  llm_factory.py  ollama_client.py  openai_client.py  pokemon_agent.py  pokemon_agent2.py  pokemon_agent_async.py  pokemon_agent_multi.py  pokemon_agent_non_streaming.py  pokemon_anthropic_agent.py  pokemon_anthropic_agent_advanced.py  pokemon_controller.py  pokemon_emulator.py  pokemon_knowledge.py  pokemon_langchain_agent.py  pokemon_langgraph_agent.py  pokemon_langgraph_agent_advanced.py  pokemon_llm_agent_base.py  pokemon_locations.py  pokemon_main.py  pokemon_red_agent.py  pokemon_setup.py  pokemon_test.py  pokemon_tools.py  pokemon_trainer.py  (+3 more)
old_files/: environment.yml  pokemon_agent.py  pokemon_agent2.py  pokemon_agent_no_stream.py  pokemon_ai_agent.py  pokemon_anthropic_agent.py  pokemon_anthropic_agent_advanced.py  pokemon_main.py  streaming_tool_calls_test.py
