[project]
name = "pokemon-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "google>=3.0.0",
    "huggingface>=0.0.1",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.46",
    "langchain-google-genai>=2.1.0",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.7",
    "langgraph>=0.3.18",
    "langgraph-checkpoint>=2.0.21",
    "langgraph-prebuilt>=0.1.3",
    "langgraph-sdk>=0.1.58",
    "langsmith>=0.3.18",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "openai>=1.67.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyboy>=2.5.1",
    "pydantic>=2.10.6",
    "pyvista>=0.44.1",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sympy>=1.13.1",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "vtk>=9.4.1",
]
